3 files modified, 5 added, 2 deleted

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
 <div class="mat-app-background basic-container">
-  <datepicker-overview-example>loading</datepicker-overview-example>
+<my-app>loading</my-app>
 </div>
-<span class="version-info">Current build: 10.1.2</span>
 
 
 <!-- Copyright 2020 Google LLC. All Rights Reserved.
