--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,19 @@
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
+<!doctype html>
+<html lang="en">
 
-<my-app>loading</my-app>
+<head>
+    <meta charset="utf-8">
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
+</head>
+
+<body>
+    <my-app>Loading</my-app>
+</body>
+
+</html>
 
 
 
